record n replay functionality

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Cursor Recorder</title>
+		<title>Mouse-recorder</title>
+		<link rel="icon" href="img/favicon.svg" type="image/svg+xml">
+		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/index.css">
 	</head>
 	<body>
 		<div id="start" class = "start-opt"><p>START RECORDING</p></div>
 		<div id="stop" class = "stop-opt"><p>STOP RECORDING</p></div>
+		<div id="cur" class = "cursor"><img src="img/cursor.png"></div>
 		<script src="js/main.js"></script>
 	</body>
 </html>
